--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -52,9 +52,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs:
-      - lint
-      - test
+    needs: [lint, test]
 
     steps:
       - name: Checkout code
