--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -5,11 +5,10 @@ on:
     branches:
       - main
     paths:
-      - 'frontend/**'
-  workflow_dispatch:  # This allows manual runs
+      - 'starter/frontend/**'
+  workflow_dispatch:
 
 jobs:
-
   setup:
     runs-on: ubuntu-latest
 
@@ -82,14 +81,16 @@ jobs:
     needs: ecr-login
 
     steps:
+      - name: List Docker images
+        run: docker images
+
       - name: Push Docker Image to ECR
         run: |
           docker push 918707588368.dkr.ecr.us-east-1.amazonaws.com/frontend:${{ github.sha }}
 
   deploy:
     runs-on: ubuntu-latest
-    needs:
-      - ecr-push
+    needs: ecr-push
 
     steps:
       - name: Deploy to Kubernetes
