--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -1,100 +1,105 @@
 name: Frontend Continuous Deployment
 
-on:
+on:  
+  workflow_dispatch:
   push:
     branches:
       - main
     paths:
-      - 'starter/frontend/**'
-  workflow_dispatch:
+      - frontend  
+      
+env:
+  NODE_VERSION: 16.9.0
+  REACT_APP_MOVIE_API_URL: http://localhost:5000
 
-jobs:
-  setup:
+
+jobs: 
+  
+  lint_job:
+    
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Set up Node.js 
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: ${{ env.NODE_VERSION }}
+          #cache: 'npm'
+          cache-dependency-path: "starter/frontend/package-lock.json"
 
-  lint:
+
+      - name: Install dependencies
+        run: cd starter/frontend && npm ci
+       
+
+      - name: Run linter
+        run: cd starter/frontend && npm run lint
+
+      
+  test_job:
+
     runs-on: ubuntu-latest
-    needs: setup
-
     steps:
+
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install Dependencies and Run Linting
-        run: |
-          cd starter/frontend
-          npm ci
-          npm run lint
-
-  test:
-    runs-on: ubuntu-latest
-    needs: setup
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install Dependencies and Run Tests
-        run: |
-          cd starter/frontend
-          npm ci
-          npm test
-
-  build:
-    runs-on: ubuntu-latest
-    needs: [lint, test]
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Build Docker Image
-        run: |
-          cd starter/frontend
-          docker build -t 918707588368.dkr.ecr.us-east-1.amazonaws.com/frontend:${{ github.sha }} .
-
-  ecr-login:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v1
+      - name: Set up Node.js 
+        uses: actions/setup-node@v3
         with:
-          registry: 918707588368.dkr.ecr.us-east-1.amazonaws.com/frontend
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: us-east-1
+          node-version: ${{ env.NODE_VERSION }}
+          #cache: 'npm'
+          cache-dependency-path: "starter/frontend/package-lock.json"
 
-  ecr-push:
+      - name: Install the dependencies.
+        run: cd starter/frontend && npm ci
+       
+      - name: Run the tests.
+        run: cd starter/frontend/ && npm run test
+
+
+  build_job:
+    needs: [lint_job, test_job]
     runs-on: ubuntu-latest
-    needs: ecr-login
-
     steps:
-      - name: List Docker images
-        run: docker images
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Push Docker Image to ECR
-        run: |
-          docker push 918707588368.dkr.ecr.us-east-1.amazonaws.com/frontend:${{ github.sha }}
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
+          aws-region: us-east-1
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: ecr-push
-
-    steps:
-      - name: Deploy to Kubernetes
-        run: |
-          kubectl apply -f kubernetes-manifests/frontend-deployment.yaml
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+  
+      #- name: Build and push to ECR
         env:
-          KUBECONFIG: ${{ github.workspace }}/kubeconfig.yaml
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: fronted
+          IMAGE_TAG: ${{ github.sha }}
+
+
+      - name: Build image
+        run: docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+
+      - name: Push to ECR
+        run: docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+
+    
+      - name: Configure kubectl
+        run: aws eks update-kubeconfig --name cluster --region us-east-1
+  
+
+      - name: Set the image tag to the newer version
+        run: cd starter/frontend/k8s && kustomize edit set image frontend=918707588368.dkr.ecr.us-east-1.amazonaws.com/frontend:${GITHUB_SHA}
+          
+
+      - name: Apply the Kubernetes manifests
+        run: kustomize build | kubectl apply -f
