--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -1,20 +1,17 @@
 name: Frontend Continuous Deployment
 
 on:
-  workflow_dispatch:
   push:
     branches:
       - main
     paths:
-      - frontend
-
-env:
-  NODE_VERSION: 16.9.0
-  REACT_APP_MOVIE_API_URL: http://localhost:5000
+      - 'starter/frontend/**'
+  workflow_dispatch:
 
 jobs:
-  lint_job:
+  setup:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -22,60 +19,82 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: '18'
 
-      - name: Install dependencies
-        run: cd starter/frontend && npm ci
-
-      - name: Run linter
-        run: cd starter/frontend && npm run lint
-
-  test_job:
+  lint:
     runs-on: ubuntu-latest
+    needs: setup
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ env.NODE_VERSION }}
+      - name: Install Dependencies and Run Linting
+        run: |
+          cd starter/frontend
+          npm ci
+          npm run lint
 
-      - name: Install the dependencies.
-        run: cd starter/frontend && npm ci
-
-      - name: Run the tests.
-        run: cd starter/frontend && npm run test
-
-  build_job:
-    needs: [lint_job, test_job]
+  test:
     runs-on: ubuntu-latest
+    needs: setup
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+      - name: Install Dependencies and Run Tests
+        run: |
+          cd starter/frontend
+          npm ci
+          npm test
 
+  build:
+    runs-on: ubuntu-latest
+    needs: [lint, test]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Build Docker Image
+        run: |
+          cd starter/frontend
+          docker build -t 918707588368.dkr.ecr.us-east-1.amazonaws.com/frontend:${{ github.sha }} .
+
+  ecr-login:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
       - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
+        uses: aws-actions/amazon-ecr-login@v1
+        with:
+          registry: 918707588368.dkr.ecr.us-east-1.amazonaws.com/frontend
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: us-east-1
 
-      - name: Build image
-        run: docker build -t ${{ steps.login-ecr.outputs.registry }}/frontend:${{ github.sha }} .
+  ecr-push:
+    runs-on: ubuntu-latest
+    needs: ecr-login
 
-      - name: Push to ECR
-        run: docker push ${{ steps.login-ecr.outputs.registry }}/frontend:${{ github.sha }}
+    steps:
+      - name: List Docker images
+        run: docker images
 
-      - name: Configure kubectl
-        run: aws eks update-kubeconfig --name cluster --region us-east-1
+      - name: Push Docker Image to ECR
+        run: |
+          docker push 918707588368.dkr.ecr.us-east-1.amazonaws.com/frontend:${{ github.sha }}
 
-      - name: Set the image tag to the newer version
-        run: cd starter/frontend/k8s && kustomize edit set image frontend=918707588368.dkr.ecr.us-east-1.amazonaws.com/frontend:${GITHUB_SHA}
+  deploy:
+    runs-on: ubuntu-latest
+    needs: ecr-push
 
-      - name: Apply the Kubernetes manifests
-        run: kustomize build | kubectl apply -f
+    steps:
+      - name: Deploy to Kubernetes
+        run: |
+          kubectl apply -f kubernetes-manifests/frontend-deployment.yaml
+        env:
+          KUBECONFIG: ${{ github.workspace }}/kubeconfig.yaml
