--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -4,98 +4,66 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch: 
+    paths:
+      - 'starter/backend/**'  # Trigger only for changes in the backend directory
+  workflow_dispatch:  # Allow manual triggers
+
+env:
+  AWS_REGION: us-east-1
+  ECR_REPOSITORY: 918707588368.dkr.ecr.us-east-1.amazonaws.com/backend
+  EKS_CLUSTER_NAME: backend
+  PYTHON_VERSION: 3.10
 
 jobs:
-
-  setup:
+  deploy:
     runs-on: ubuntu-latest
+    environment: Production
 
     steps:
-      - name: Checkout code
+      - name: Check out the repository
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          node-version: '18'
+          python-version: ${{ env.PYTHON_VERSION }}
 
-  lint:
-    runs-on: ubuntu-latest
-    needs: setup
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install Dependencies and Run Linting
+      - name: Install dependencies
+        working-directory: starter/backend
         run: |
-          npm ci
-          npm run lint
+          python -m pip install --upgrade pip
+          pip install pipenv
+          pipenv install --dev
 
-  test:
-    runs-on: ubuntu-latest
-    needs: setup
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install Dependencies and Run Tests
+      - name: Run linting
         run: |
-          npm ci
-          npm test
+          cd starter/backend
+          pipenv run lint
 
-  build:
-    runs-on: ubuntu-latest
-    needs:
-      - lint
-      - test
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Build Docker Image
+      - name: Run tests
         run: |
-          docker build -t backend:latest .
+          cd starter/backend
+          pipenv run test
 
-  ecr-login:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@v2
 
-  ecr-push:
-    runs-on: ubuntu-latest
-    needs: ecr-login
-
-    steps:
-      - name: Push Docker Image to ECR
+      - name: Build and push the Docker image
+        working-directory: starter/backend
         run: |
-          docker tag backend:${{ github.sha }} 918707588368.dkr.ecr.us-east-1.amazonaws.com/backend:${{ github.sha }}
-          docker push 918707588368.dkr.ecr.us-east-1.amazonaws.com/backend:${{ github.sha }}
+          docker build -t ${{ env.ECR_REPOSITORY }}:${{ github.sha }} .
+          docker push ${{ env.ECR_REPOSITORY }}:${{ github.sha }}
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs:
-      - ecr-push
+      - name: Update kubeconfig for Amazon EKS
+        run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
 
-    steps:
-      - name: Deploy to Kubernetes
+      - name: Deploy Docker image to Amazon EKS
         run: |
-          # Add commands to deploy the application using kubectl here
-          # Example:
-          # kubectl apply -f kubernetes-manifests/backend-deployment.yaml
-        env:
-          KUBECONFIG: ${{ github.workspace }}/kubeconfig.yaml
+          kubectl set image deployment/backend backend=${{ env.ECR_REPOSITORY }}:${{ github.sha }} --record
