--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -6,11 +6,10 @@ on:
       - main
     paths:
       - 'starter/frontend/**'
-  workflow_dispatch:  # This allows manual runs
+  workflow_dispatch:
 
 jobs:
-
-  lint:
+  lint_job:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,12 +21,11 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Restore Cache
+      - name: Cache node modules
         uses: actions/cache@v3
         with:
           path: starter/frontend/node_modules
-          key: npm-${{ runner.os }}-frontend-${{ hashFiles('starter/frontend/package-lock.json') }}
-          restore-keys: npm-${{ runner.os }}-frontend-
+          key: ${{ runner.os }}-node-${{ hashFiles('starter/frontend/package-lock.json') }}
 
       - name: Install Dependencies
         run: npm ci
@@ -37,7 +35,7 @@ jobs:
         run: npm run lint
         working-directory: starter/frontend
 
-  test:
+  test_job:
     runs-on: ubuntu-latest
 
     steps:
@@ -49,12 +47,11 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Restore Cache
+      - name: Cache node modules
         uses: actions/cache@v3
         with:
           path: starter/frontend/node_modules
-          key: npm-${{ runner.os }}-frontend-${{ hashFiles('starter/frontend/package-lock.json') }}
-          restore-keys: npm-${{ runner.os }}-frontend-
+          key: ${{ runner.os }}-node-${{ hashFiles('starter/frontend/package-lock.json') }}
 
       - name: Install Dependencies
         run: npm ci
@@ -64,26 +61,30 @@ jobs:
         run: npm test
         working-directory: starter/frontend
 
-  
-  build:
+  build_job:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    needs: [lint_job, test_job]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: './starter/frontend/package-lock.json'
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - run: npm ci
-      working-directory: './starter/frontend'
-    - run: npm run build --if-present
-      working-directory: './starter/frontend'
-    - run: npm test
-      working-directory: './starter/frontend'
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: starter/frontend/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('starter/frontend/package-lock.json') }}
+
+      - name: Install Dependencies
+        run: npm ci
+        working-directory: starter/frontend
+
+      - name: Build Docker Image
+        run: |
+          docker build -t frontend-app:${{ github.sha }} -f Dockerfile .
+        working-directory: starter/frontend
