--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -13,7 +13,7 @@ env:
   REACT_APP_MOVIE_API_URL: http://localhost:5000
   AWS_REGION: us-east-1
   ECR_REPOSITORY: 918707588368.dkr.ecr.us-east-1.amazonaws.com/frontend
-  EKS_CLUSTER_NAME: frontend
+  EKS_CLUSTER_NAME: cluster
 
 jobs:
   deploy:
