--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -11,7 +11,7 @@ on:
 env:
   AWS_REGION: us-east-1
   ECR_REPOSITORY: 918707588368.dkr.ecr.us-east-1.amazonaws.com/backend
-  EKS_CLUSTER_NAME: backend
+  EKS_CLUSTER_NAME: cluster
   PYTHON_VERSION: 3.9
 
 jobs:
